# Glyphlow

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml  update-nix.yml
src/: app_executor.rs  app_state.rs  ax_element.rs  config.rs  drawer.rs  key_listener.rs  lib.rs  main.rs  os_util.rs  util.rs
src/action/: element_action.rs  mod.rs  text_action.rs  word_picker.rs
src/app_engine/: drawing.rs  filtering.rs  interaction.rs  lifecycle.rs  mod.rs  workflow.rs
src/user_interface/: animation.rs  drawer.rs  hint_box.rs  mod.rs
tests/: lifecycle_tests.rs
