[package]
name = "glyphlow"
version = "0.0.1"
edition = "2024"

[dependencies]
rdev = {version = "0.5.3", features = ["unstable_grab"]}
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.1"
core-text = "21.0.0"
core-graphics-types = "0.2.0"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-text = "0.3.2"
objc2-vision = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
block2 = "0.6.2"
regex = "1.12.3"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
unicode-width = "0.2.2"
simple_logger = "5.2.0"
log = "0.4.29"
